message/generation/swift-mt-definition/format/SwiftMtComponentFormatParser.cpp

#include "../proto/SwiftMtMessageDefinition.pb.h"
#include <vector>
#include <string>
#include "BaseErrorListener.h"
#include "SwiftMtComponentFormatLexer.h"


// Generated from C:/programming/message-converter-c/message/generation/swift-mt-definition/format/SwiftMtComponentFormat.g4 by ANTLR 4.7.2


#include "SwiftMtComponentFormatListener.h"

#include "SwiftMtComponentFormatParser.h"


using namespace antlrcpp;
using namespace message::definition::swift::mt;
using namespace antlr4;

SwiftMtComponentFormatParser::SwiftMtComponentFormatParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SwiftMtComponentFormatParser::~SwiftMtComponentFormatParser() {
  delete _interpreter;
}

std::string SwiftMtComponentFormatParser::getGrammarFileName() const {
  return "SwiftMtComponentFormat.g4";
}

const std::vector<std::string>& SwiftMtComponentFormatParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SwiftMtComponentFormatParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Field_formatContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Field_formatContext::Field_formatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtComponentFormatParser::Field_formatContext::EOF() {
  return getToken(SwiftMtComponentFormatParser::EOF, 0);
}

std::vector<SwiftMtComponentFormatParser::Comp_formatContext *> SwiftMtComponentFormatParser::Field_formatContext::comp_format() {
  return getRuleContexts<SwiftMtComponentFormatParser::Comp_formatContext>();
}

SwiftMtComponentFormatParser::Comp_formatContext* SwiftMtComponentFormatParser::Field_formatContext::comp_format(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::Comp_formatContext>(i);
}

std::vector<SwiftMtComponentFormatParser::SeparatorContext *> SwiftMtComponentFormatParser::Field_formatContext::separator() {
  return getRuleContexts<SwiftMtComponentFormatParser::SeparatorContext>();
}

SwiftMtComponentFormatParser::SeparatorContext* SwiftMtComponentFormatParser::Field_formatContext::separator(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::SeparatorContext>(i);
}


size_t SwiftMtComponentFormatParser::Field_formatContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleField_format;
}

void SwiftMtComponentFormatParser::Field_formatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterField_format(this);
}

void SwiftMtComponentFormatParser::Field_formatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitField_format(this);
}

SwiftMtComponentFormatParser::Field_formatContext* SwiftMtComponentFormatParser::field_format() {
  Field_formatContext *_localctx = _tracker.createInstance<Field_formatContext>(_ctx, getState());
  enterRule(_localctx, 0, SwiftMtComponentFormatParser::RuleField_format);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(32);
      comp_format();
      setState(34);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(33);
        separator();
        break;
      }

      }
      setState(38); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SwiftMtComponentFormatParser::IDENTIFIER)
      | (1ULL << SwiftMtComponentFormatParser::DIGIT)
      | (1ULL << SwiftMtComponentFormatParser::LBRACKET)
      | (1ULL << SwiftMtComponentFormatParser::ANY))) != 0));
    setState(40);
    match(SwiftMtComponentFormatParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Comp_formatContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Comp_formatContext::Comp_formatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwiftMtComponentFormatParser::ComponentContext* SwiftMtComponentFormatParser::Comp_formatContext::component() {
  return getRuleContext<SwiftMtComponentFormatParser::ComponentContext>(0);
}

SwiftMtComponentFormatParser::Optional_componentContext* SwiftMtComponentFormatParser::Comp_formatContext::optional_component() {
  return getRuleContext<SwiftMtComponentFormatParser::Optional_componentContext>(0);
}


size_t SwiftMtComponentFormatParser::Comp_formatContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleComp_format;
}

void SwiftMtComponentFormatParser::Comp_formatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComp_format(this);
}

void SwiftMtComponentFormatParser::Comp_formatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComp_format(this);
}

SwiftMtComponentFormatParser::Comp_formatContext* SwiftMtComponentFormatParser::comp_format() {
  Comp_formatContext *_localctx = _tracker.createInstance<Comp_formatContext>(_ctx, getState());
  enterRule(_localctx, 2, SwiftMtComponentFormatParser::RuleComp_format);
   new_component(); 

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SwiftMtComponentFormatParser::IDENTIFIER:
      case SwiftMtComponentFormatParser::DIGIT:
      case SwiftMtComponentFormatParser::ANY: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        component();
        break;
      }

      case SwiftMtComponentFormatParser::LBRACKET: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        optional_component();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   _ctx->stop = _input->LT(-1);

                                _components.emplace_back(_current_component);
                           
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Optional_componentContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Optional_componentContext::Optional_componentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtComponentFormatParser::Optional_componentContext::LBRACKET() {
  return getToken(SwiftMtComponentFormatParser::LBRACKET, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Optional_componentContext::RBRACKET() {
  return getToken(SwiftMtComponentFormatParser::RBRACKET, 0);
}

SwiftMtComponentFormatParser::Opt_comp_cttntContext* SwiftMtComponentFormatParser::Optional_componentContext::opt_comp_cttnt() {
  return getRuleContext<SwiftMtComponentFormatParser::Opt_comp_cttntContext>(0);
}


size_t SwiftMtComponentFormatParser::Optional_componentContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleOptional_component;
}

void SwiftMtComponentFormatParser::Optional_componentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptional_component(this);
}

void SwiftMtComponentFormatParser::Optional_componentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptional_component(this);
}

SwiftMtComponentFormatParser::Optional_componentContext* SwiftMtComponentFormatParser::optional_component() {
  Optional_componentContext *_localctx = _tracker.createInstance<Optional_componentContext>(_ctx, getState());
  enterRule(_localctx, 4, SwiftMtComponentFormatParser::RuleOptional_component);
   _current_component.set_is_optional(true); 

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(SwiftMtComponentFormatParser::LBRACKET);
    setState(47);
    dynamic_cast<Optional_componentContext *>(_localctx)->cntt = opt_comp_cttnt();
     *_current_component.mutable_full_format() = (dynamic_cast<Optional_componentContext *>(_localctx)->cntt != nullptr ? _input->getText(dynamic_cast<Optional_componentContext *>(_localctx)->cntt->start, dynamic_cast<Optional_componentContext *>(_localctx)->cntt->stop) : nullptr); 
    setState(49);
    match(SwiftMtComponentFormatParser::RBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Opt_comp_cttntContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Opt_comp_cttntContext::Opt_comp_cttntContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SwiftMtComponentFormatParser::Length_restrictedContext *> SwiftMtComponentFormatParser::Opt_comp_cttntContext::length_restricted() {
  return getRuleContexts<SwiftMtComponentFormatParser::Length_restrictedContext>();
}

SwiftMtComponentFormatParser::Length_restrictedContext* SwiftMtComponentFormatParser::Opt_comp_cttntContext::length_restricted(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::Length_restrictedContext>(i);
}

std::vector<SwiftMtComponentFormatParser::SignContext *> SwiftMtComponentFormatParser::Opt_comp_cttntContext::sign() {
  return getRuleContexts<SwiftMtComponentFormatParser::SignContext>();
}

SwiftMtComponentFormatParser::SignContext* SwiftMtComponentFormatParser::Opt_comp_cttntContext::sign(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::SignContext>(i);
}

std::vector<SwiftMtComponentFormatParser::ConstantContext *> SwiftMtComponentFormatParser::Opt_comp_cttntContext::constant() {
  return getRuleContexts<SwiftMtComponentFormatParser::ConstantContext>();
}

SwiftMtComponentFormatParser::ConstantContext* SwiftMtComponentFormatParser::Opt_comp_cttntContext::constant(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::ConstantContext>(i);
}

std::vector<SwiftMtComponentFormatParser::Comp_formatContext *> SwiftMtComponentFormatParser::Opt_comp_cttntContext::comp_format() {
  return getRuleContexts<SwiftMtComponentFormatParser::Comp_formatContext>();
}

SwiftMtComponentFormatParser::Comp_formatContext* SwiftMtComponentFormatParser::Opt_comp_cttntContext::comp_format(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::Comp_formatContext>(i);
}

std::vector<SwiftMtComponentFormatParser::SeparatorContext *> SwiftMtComponentFormatParser::Opt_comp_cttntContext::separator() {
  return getRuleContexts<SwiftMtComponentFormatParser::SeparatorContext>();
}

SwiftMtComponentFormatParser::SeparatorContext* SwiftMtComponentFormatParser::Opt_comp_cttntContext::separator(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::SeparatorContext>(i);
}


size_t SwiftMtComponentFormatParser::Opt_comp_cttntContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleOpt_comp_cttnt;
}

void SwiftMtComponentFormatParser::Opt_comp_cttntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOpt_comp_cttnt(this);
}

void SwiftMtComponentFormatParser::Opt_comp_cttntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOpt_comp_cttnt(this);
}

SwiftMtComponentFormatParser::Opt_comp_cttntContext* SwiftMtComponentFormatParser::opt_comp_cttnt() {
  Opt_comp_cttntContext *_localctx = _tracker.createInstance<Opt_comp_cttntContext>(_ctx, getState());
  enterRule(_localctx, 6, SwiftMtComponentFormatParser::RuleOpt_comp_cttnt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(52);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(51);
      dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_before = separator();
      break;
    }

    }
     *_current_component.mutable_separator_before() = (dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_before != nullptr ? _input->getText(dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_before->start, dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_before->stop) : nullptr); 
    setState(59); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(59);
              _errHandler->sync(this);
              switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
              case 1: {
                setState(55);
                length_restricted();
                break;
              }

              case 2: {
                setState(56);
                sign();
                break;
              }

              case 3: {
                setState(57);
                constant();
                break;
              }

              case 4: {
                setState(58);
                comp_format();
                break;
              }

              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(61); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SwiftMtComponentFormatParser::ANY) {
      setState(63);
      dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_after = separator();
    }
     *_current_component.mutable_separator_after() = (dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_after != nullptr ? _input->getText(dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_after->start, dynamic_cast<Opt_comp_cttntContext *>(_localctx)->sep_after->stop) : nullptr); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::ComponentContext::ComponentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwiftMtComponentFormatParser::Length_restrictedContext* SwiftMtComponentFormatParser::ComponentContext::length_restricted() {
  return getRuleContext<SwiftMtComponentFormatParser::Length_restrictedContext>(0);
}

SwiftMtComponentFormatParser::ConstantContext* SwiftMtComponentFormatParser::ComponentContext::constant() {
  return getRuleContext<SwiftMtComponentFormatParser::ConstantContext>(0);
}

std::vector<SwiftMtComponentFormatParser::SeparatorContext *> SwiftMtComponentFormatParser::ComponentContext::separator() {
  return getRuleContexts<SwiftMtComponentFormatParser::SeparatorContext>();
}

SwiftMtComponentFormatParser::SeparatorContext* SwiftMtComponentFormatParser::ComponentContext::separator(size_t i) {
  return getRuleContext<SwiftMtComponentFormatParser::SeparatorContext>(i);
}


size_t SwiftMtComponentFormatParser::ComponentContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleComponent;
}

void SwiftMtComponentFormatParser::ComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponent(this);
}

void SwiftMtComponentFormatParser::ComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponent(this);
}

SwiftMtComponentFormatParser::ComponentContext* SwiftMtComponentFormatParser::component() {
  ComponentContext *_localctx = _tracker.createInstance<ComponentContext>(_ctx, getState());
  enterRule(_localctx, 8, SwiftMtComponentFormatParser::RuleComponent);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SwiftMtComponentFormatParser::ANY) {
      setState(68);
      separator();
    }
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SwiftMtComponentFormatParser::DIGIT: {
        setState(71);
        length_restricted();
        break;
      }

      case SwiftMtComponentFormatParser::IDENTIFIER: {
        setState(72);
        constant();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(76);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(75);
      separator();
      break;
    }

    }
   _ctx->stop = _input->LT(-1);

                                *_current_component.mutable_full_format() = _input->getText(_localctx->start, _input->LT(-1));
                           
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SeparatorContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::SeparatorContext::SeparatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SwiftMtComponentFormatParser::SeparatorContext::ANY() {
  return getTokens(SwiftMtComponentFormatParser::ANY);
}

tree::TerminalNode* SwiftMtComponentFormatParser::SeparatorContext::ANY(size_t i) {
  return getToken(SwiftMtComponentFormatParser::ANY, i);
}


size_t SwiftMtComponentFormatParser::SeparatorContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleSeparator;
}

void SwiftMtComponentFormatParser::SeparatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSeparator(this);
}

void SwiftMtComponentFormatParser::SeparatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSeparator(this);
}

SwiftMtComponentFormatParser::SeparatorContext* SwiftMtComponentFormatParser::separator() {
  SeparatorContext *_localctx = _tracker.createInstance<SeparatorContext>(_ctx, getState());
  enterRule(_localctx, 10, SwiftMtComponentFormatParser::RuleSeparator);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(78);
              match(SwiftMtComponentFormatParser::ANY);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(81); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Length_restrictedContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Length_restrictedContext::Length_restrictedContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwiftMtComponentFormatParser::Length_restrictionContext* SwiftMtComponentFormatParser::Length_restrictedContext::length_restriction() {
  return getRuleContext<SwiftMtComponentFormatParser::Length_restrictionContext>(0);
}

SwiftMtComponentFormatParser::Charset_typeContext* SwiftMtComponentFormatParser::Length_restrictedContext::charset_type() {
  return getRuleContext<SwiftMtComponentFormatParser::Charset_typeContext>(0);
}


size_t SwiftMtComponentFormatParser::Length_restrictedContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleLength_restricted;
}

void SwiftMtComponentFormatParser::Length_restrictedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLength_restricted(this);
}

void SwiftMtComponentFormatParser::Length_restrictedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLength_restricted(this);
}

SwiftMtComponentFormatParser::Length_restrictedContext* SwiftMtComponentFormatParser::length_restricted() {
  Length_restrictedContext *_localctx = _tracker.createInstance<Length_restrictedContext>(_ctx, getState());
  enterRule(_localctx, 12, SwiftMtComponentFormatParser::RuleLength_restricted);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    length_restriction();
    setState(84);
    charset_type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SwiftMtComponentFormatParser::SignContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleSign;
}

void SwiftMtComponentFormatParser::SignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSign(this);
}

void SwiftMtComponentFormatParser::SignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSign(this);
}

SwiftMtComponentFormatParser::SignContext* SwiftMtComponentFormatParser::sign() {
  SignContext *_localctx = _tracker.createInstance<SignContext>(_ctx, getState());
  enterRule(_localctx, 14, SwiftMtComponentFormatParser::RuleSign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(SwiftMtComponentFormatParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtComponentFormatParser::ConstantContext::IDENTIFIER() {
  return getToken(SwiftMtComponentFormatParser::IDENTIFIER, 0);
}


size_t SwiftMtComponentFormatParser::ConstantContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleConstant;
}

void SwiftMtComponentFormatParser::ConstantContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstant(this);
}

void SwiftMtComponentFormatParser::ConstantContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtComponentFormatListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstant(this);
}

SwiftMtComponentFormatParser::ConstantContext* SwiftMtComponentFormatParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 16, SwiftMtComponentFormatParser::RuleConstant);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(SwiftMtComponentFormatParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Charset_typeContext ------------------------------------------------------------------

SwiftMtComponentFormatParser::Charset_typeContext::Charset_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_NUMERIC() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_NUMERIC, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_ALPHA() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_ALPHA, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_ALPHA_NUMERIC() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_ALPHA_NUMERIC, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_HEX() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_HEX, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_X() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_X, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_Y() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_Y, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_Z() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_Z, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_DECIMALS() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_DECIMALS, 0);
}

tree::TerminalNode* SwiftMtComponentFormatParser::Charset_typeContext::CHARSET_BLANK() {
  return getToken(SwiftMtComponentFormatParser::CHARSET_BLANK, 0);
}


size_t SwiftMtComponentFormatParser::Charset_typeContext::getRuleIndex() const {
  return SwiftMtComponentFormatParser::RuleCharset_type;
}
